# OAuth_axum_sqlite

./: Cargo.toml  oauth.db
migrations/: 0001_users.sql  0002_tokens.sql
src/: main.rs
src/controllers/: login.rs  mod.rs
src/models/: mod.rs
src/services/: authenticate_user.rs  logout.rs  mod.rs  register_user.rs
website/: index.html  script.js  styles.css
